src/style.css
@import "./reset.css";

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

:root {
  --square-size: 43px;
  --board-gap: 2px;
  --board-size: calc(calc(var(--ship-size) * 10) + calc(var(--board-gap) * 10));
  --color-water: rgb(135, 217, 214);
  --color-water-dark: rgb(56, 127, 125);
  --color-background: #27272a;
  --color-light: #f4f4f5;
  --color-medium-light: #a1a1aa;
  --color-medium-dark: #52525b;
  --color-dark: #3f3f46;
  --color-complementary1-light: rgb(162, 242, 144);
  --color-complementary1-dark: rgb(14, 60, 13);
  --color-complementary2-light: rgb(245, 176, 118);
  --color-complementary2-dark: rgb(131, 63, 14);
  font-family: "Roboto", sans-serif;
}

/* * {
    outline: dashed red;
}  */

body {
  position: relative;
  height: 100vh;
  width: 100vw;
  color: var(--color-light);
}

#game {
  background-color: var(--color-background);
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-rows: 1fr 5fr 50px;
  align-items: center;
}

.inactive {
  position: absolute;
  right: -100%;
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: end;
}

header > div {
  background-color: var(--color-water-dark);
  width: max(400px, 40vw);
  color: var(--color-light);
  padding: 20px;
  text-align: center;
  font-size: 2rem;
  letter-spacing: 0.2rem;
  border-radius: 1rem;
}

header > button {
  background-color: red;
}

main {
  width: 100%;
  display: grid;
  grid-template-rows: 50px 1fr;
  grid-template-columns: repeat(2, 1fr);
  justify-items: center;
  gap: auto;
  align-items: center;
}

main > h1 {
  color: var(--color-light);
  grid-row: 1 / 2;
}

.board {
  width: var(--board-size);
  height: var(--board-size);
  background-color: var(--color-background);
  display: flex;
  flex-direction: column;
  grid-template-rows: repeat(10, 1fr);
  gap: var(--board-gap);
}

.row {
  display: flex;
  height: auto;
  gap: var(--board-gap);
  position: relative;
}

.square {
  background-color: var(--color-water);
  width: var(--square-size);
  height: var(--square-size);
}

.square.enemy {
  background-color: #52525b;
}
.ship-square {
  background-color: blue;
  width: var(--square-size);
  height: var(--square-size);
}

.square.ship-square.hit {
  background-color: green;
}

.square.ship-square.hit.just-hit {
  background-color: rgb(1, 43, 1);
}
.square.hit {
  transition: all 1s;
  background-color: yellow;
}

.square.hit.just-hit {
  background-color: red;
}

.square.enemy:hover {
  background-color: rgb(227, 134, 134);
}

footer {
  margin-top: auto;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 50px;
  width: 100%;
  gap: 2vw;
  background-color: var(--color-background);
  color: white;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 1.5rem;
}

#github-logo {
  height: 30px;
}

#pop-up {
  width: 100vw;
  height: 100vh;
  background-color: var(--color-background);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: grid;
  justify-items: center;
  align-items: center;
  grid-template-rows: 100px 50px 1fr;
  grid-template-columns: 2fr 1fr;
  grid-template-areas:
    "title title"
    "description description"
    "board ships";
}

#pop-up.inactive {
  left: -100%;
}
#pop-up article {
  grid-area: title;
}

#pop-up #description {
  grid-area: description;
  justify-self: stretch;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
  padding: 20px;
}

#pop-up .board {
  grid-area: board;
}

#pop-up article {
  background: linear-gradient(
    to bottom,
    rgb(135, 135, 236),
    var(--color-water)
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-align: center;
}

#title {
  font-size: 3rem;
  font-weight: bold;
  letter-spacing: 0.3rem;
  padding: 20px;
}

#ships {
  grid-area: ships;
  height: auto;
  display: flex;
  gap: 30px;
  flex-wrap: wrap;
  align-items: start;
  position: relative;
}

#ships .ship.hide {
  opacity: 0.3;
  display: none;
}

.ship {
  display: flex;
  gap: var(--board-gap);
  z-index: 3;
}

.ship.vertical {
  flex-direction: column;
}

#pop-up .board {
  max-height: var(--board-size);
}

#pop-up .board .ship.vertical {
  position: static;
  z-index: 10;
}

.square.drag-over {
  background-color: yellow;
}

.square.behind {
  display: none;
}

@media only screen and (max-width: 950px) {
  main {
    display: flex;
    flex-direction: column;
    height: 100%;
    justify-content: space-evenly;
    gap: 30px;
    padding-top: 20px;
  }

  header {
    align-self: center;
  }
  #game {
    background-color: var(--color-background);
    height: auto;
    width: 100vw;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

